name:           mwc-random
version:        0.15.0.2
synopsis:       Fast, high quality pseudo random number generation
description:
  This package contains code for generating high quality random
  numbers that follow either a uniform or normal distribution.  The
  generated numbers are suitable for use in statistical applications.
  .
  The uniform PRNG uses Marsaglia's MWC256 (also known as MWC8222)
  multiply-with-carry generator, which has a period of 2^8222 and
  fares well in tests of randomness.  It is also extremely fast,
  between 2 and 3 times faster than the Mersenne Twister.
  .
  Compared to the mersenne-random package, this package has a more
  convenient API, is faster, and supports more statistical
  distributions.

license:        BSD3
license-file:   LICENSE
homepage:       https://github.com/bos/mwc-random
bug-reports:    https://github.com/bos/mwc-random/issues
author:         Bryan O'Sullivan <bos@serpentine.com>
maintainer:     Bryan O'Sullivan <bos@serpentine.com>
copyright:      2009, 2010, 2011 Bryan O'Sullivan
category:       Math, Statistics
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
  changelog.md
  README.markdown

tested-with:
    GHC ==7.10.3
     || ==8.0.2
     || ==8.2.2
     || ==8.4.4
     || ==8.6.5
     || ==8.8.3
     || ==8.10.1
  , GHCJS ==8.4

library
  default-language: Haskell2010
  exposed-modules: System.Random.MWC
                   System.Random.MWC.Distributions
                   System.Random.MWC.CondensedTable
                   System.Random.MWC.SeedSource
  build-depends: base           >= 4.8 && < 5
               , primitive      >= 0.6.2
               , random         >= 1.2
               , time
               , vector         >= 0.7
               , math-functions >= 0.2.1.0

  ghc-options: -Wall -funbox-strict-fields -fwarn-tabs


source-repository head
  type:     git
  location: git://github.com/bos/mwc-random

source-repository head
  type:     mercurial
  location: https://bitbucket.org/bos/mwc-random


benchmark mwc-bench
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        Benchmark.hs
  default-language: Haskell2010
  build-depends: base < 5
               , vector          >= 0.11
               , gauge           >= 0.2.5
               , mersenne-random
               , mwc-random
               , random


test-suite mwc-prop-tests
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is:        props.hs
  default-language: Haskell2010
  ghc-options:
    -Wall -threaded -rtsopts

  build-depends: base
               , mwc-random
               , QuickCheck                 >=2.2
               , vector                     >=0.12.1
               , tasty >=1.3.1
               , tasty-quickcheck
               , tasty-hunit

test-suite mwc-doctests
  type:             exitcode-stdio-1.0
  main-is:          doctests.hs
  hs-source-dirs:   tests
  default-language: Haskell2010
  if impl(ghcjs) || impl(ghc < 8.0)
    Buildable: False
  build-depends:
            base       -any
          , mwc-random -any
          , doctest    >=0.15 && <0.19
            --
          , bytestring
          , primitive
          , vector     >=0.11
          , random     >=1.2
