name:           mwc-random-benchmarks
version:        0
synopsis:       Benchmarks for the mwc-random package
description:    Benchmarks for the mwc-random package
license:        BSD3
license-file:   ../LICENSE
build-type:     Simple
cabal-version:  >= 1.6

executable bm
  main-is: Benchmark.hs

  build-depends:
    base < 5,
    criterion,
    mersenne-random,
    mwc-random,
    random
