name:           mwc-random-bench
version:        0
synopsis:       Benchmarks for the mwc-random package
description:    Benchmarks for the mwc-random package
license:        BSD3
license-file:   ../LICENSE
build-type:     Simple
cabal-version:  >= 1.6

executable mwc-bench
  main-is: Benchmark.hs

  build-depends: base < 5
               , vector          >= 0.11
               , criterion       >=1.4
               , mersenne-random
               , mwc-random
               , random

test-suite mwc-tests
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        tests.hs
  other-modules:  KS
                  QC

  ghc-options:
    -Wall -threaded -rtsopts

  build-depends:
    vector >= 0.7,
    HUnit,
    QuickCheck,
    base,
    mwc-random,
    statistics >= 0.10.1.0,
    test-framework,
    test-framework-hunit,
    test-framework-quickcheck2
