name:           mwc-random-bench
version:        0
synopsis:       Benchmarks for the mwc-random package
description:    Benchmarks for the mwc-random package
license:        BSD3
license-file:   ../LICENSE
build-type:     Simple
cabal-version:  >= 1.6

executable mwc-dieharder
  main-is: exe/diehard-source.hs
  build-depends: base
               , mwc-random

benchmark mwc-bench
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        Benchmark.hs

  build-depends: base < 5
               , vector          >= 0.11
               , criterion       >=1.4
               , mersenne-random
               , mwc-random
               , random

               
-- FIXME: compiles but broken
test-suite mwc-prng-tests
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        tests.hs
  other-modules:  MWC.KS
                  MWC.QC
                  MWC.ChiSquare

  ghc-options:
    -Wall -threaded -rtsopts

  build-depends: base
               , mwc-random
               , vector >= 0.7
               , HUnit
               , QuickCheck
               , statistics >= 0.14
               , test-framework
               , test-framework-hunit
               , test-framework-quickcheck2
               