name:           mwc-random-bench
version:        0
synopsis:       Benchmarks for the mwc-random package
description:    Benchmarks for the mwc-random package
license:        BSD3
license-file:   ../LICENSE
build-type:     Simple
cabal-version:  >= 1.6

executable mwc-dieharder
  main-is: exe/diehard-source.hs
  build-depends: base
               , mwc-random

-- FIXME: compiles but broken
test-suite mwc-prng-tests
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        tests.hs
  other-modules:  MWC.KS
                  MWC.QC
                  MWC.ChiSquare

  ghc-options:
    -Wall -threaded -rtsopts

  build-depends: base
               , mwc-random
               , vector                     >= 0.7
               , HUnit
               , QuickCheck                 >= 2.2
               , statistics                 >= 0.14
               , test-framework
               , test-framework-hunit
               , test-framework-quickcheck2

test-suite mwc-prop-tests
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        props.hs

  ghc-options:
    -Wall -threaded -rtsopts

  build-depends: base
               , mwc-random
               , QuickCheck                 >= 2.2
               , test-framework
               , test-framework-quickcheck2
               , test-framework-hunit
